CSS fix for having profile box appear over nano-slider scrollbar

--- a/resources/stylesheets/components/chat.scss
+++ b/resources/stylesheets/components/chat.scss
@@ -89,6 +89,7 @@
 .user-dropdown,
 .profile-box {
   background: #ffffff;
+  z-index: 20000;
 }
 
 .user-dropdown {
